deploy/myapp-client-deploy.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: myapp-client
spec:
  replicas: 1
  selector:
    app: myapp-client
    deploymentconfig: myapp-client
  template:
    metadata:
      labels:
        app: myapp-client
        deploymentconfig: myapp-client
    spec:
      containers:
        - image: 172.30.1.1:5000/sample-app/myapp-client
          ports:
            - containerPort: 3000
          name: myapp-client
