deploy/myapp-server-deploy.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: myapp-server
spec:
  replicas: 1
  selector:
    app: myapp-server
    deploymentconfig: myapp-server
  template:
    metadata:
      labels:
        app: myapp-server
        deploymentconfig: myapp-server
    spec:
      containers:
        - image: 172.30.1.1:5000/sample-app/myapp-server
          name: myapp-server
          ports:
            - containerPort: 5000
