deploy/myapp-worker-deploy.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: myapp-worker
spec:
  replicas: 1
  selector:
    app: myapp-worker
    deploymentconfig: myapp-worker
  template:
    metadata:
      labels:
        app: myapp-worker
        deploymentconfig: myapp-worker
    spec:
      containers:
        - image: 172.30.1.1:5000/sample-app/myapp-worker
          name: myapp-worker
