deploy/myapp-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-client-service
spec:
  ports:
    - name: 3000-tcp
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    deploymentconfig: myapp-client
  type: ClusterIP
