deploy/myapp-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-postgres-service
spec:
  ports:
    - name: 5432-tcp
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    deploymentconfig: myapp-postgres
  type: ClusterIP
