deploy/myapp-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-redis-service
spec:
  ports:
    - name: 6379-tcp
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    deploymentconfig: myapp-redis
  type: ClusterIP
