deploy/myapp-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-server-service
spec:
  ports:
    - name: 5000-tcp
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    deploymentconfig: myapp-server
  type: ClusterIP
